# reconcileos

./: .env.example  .gitignore  DATA_FLOW_DIAGRAM.md  Makefile  README.md  go.work  go.work.sum
.github/workflows/: ci.yml
api/: Dockerfile  README.md  go.mod  go.sum  main.go
api/config/: config.go
api/db/: supabase.go
api/handlers/: attestations.go  attestations_test.go  auth.go  events_stream.go  github_token.go  health.go  repo_status.go  repo_status_test.go  review_queue.go  triage.go  triage_test.go  webhook.go  webhook_test.go
api/middleware/: auth.go  org_scope.go
api/services/: attestation.go  attestation_export.go  attestation_test.go  execution_service.go  github.go  pr_service.go  pr_service_test.go  triage.go  triage_test.go
bots/: README.md  seed-bot.sh  seed-bot.yaml
bots/openrewrite-cve-patcher/: Dockerfile  entrypoint.sh  manifest.yaml
cli/: Cargo.toml  README.md
cli/src/: api_client.rs  auth.rs  config.rs  git.rs  main.rs  output.rs
infra/: README.md  fly.toml  github-app-manifest.json
infra/supabase/: config.toml
infra/supabase/.temp/: project-ref
infra/supabase/migrations/: 001_initial_schema.sql  002_fix_get_org_id_search_path.sql  003_add_github_installations.sql  (+2 more)
runtime/: Dockerfile  README.md  RUNBOOK.md  go.mod  go.sum  main.go
runtime/executor/: runner.go  runner_test.go
runtime/manifest/: parser.go  parser_test.go
runtime/queue/: dispatcher.go  dispatcher_test.go
supabase/.temp/: linked-project.json
web/: Dockerfile  package-lock.json  package.json  tsconfig.app.tsbuildinfo
web/src/: App.tsx  index.css
(+17 files in other folders)
