[package]
name = "recos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
humantime = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
base64 = "0.22"
urlencoding = "2"
